@@ -42,27 +42,14 @@ const httpserver = http.createServer((req, res) => {
     res.writeHead(200, { 'Content-Type': 'image/gif', 'Timing-Allow-Origin': '*' });
     res.end(image1x1);
   } else if (req.url.startsWith("/cdn/perf.js")) {
-    res.writeHead(200, { 'Content-Type': 'text/javascript; charset=UTF-8',
-        'Timing-Allow-Origin': '*', 'Access-Control-Allow-Origin': '*', 'Cache-Control': 'no-cache' });
+    res.writeHead(200, { 'Content-Type': 'text/javascript; charset=UTF-8', 'Timing-Allow-Origin': '*',
+        'Access-Control-Allow-Origin': '*', 'Cache-Control': 'no-cache, no-store, must-revalidate' });
     perfjs(req,res);
     res.end();
   } else if (req.url.startsWith("/cdn/beacon")) {
     res.writeHead(200, { 'Content-Type': 'image/gif', 'Cache-Control': 'no-cache' });
     perfbeacon(req,res);
     res.end(image1x1);
-  // deprecated - to be removed
-  } else if (req.url.startsWith("/cdn/states")) {
-    res.writeHead(200, { 'Content-Type': 'application/json' });
-    if (cdnboxStates.subscribestate !== undefined) {
-      var cdnboxState = cdnboxStates.local;
-      var subscribestate = req.headers['subscribe-state'];
-      if (subscribestate && cdnboxStates[subscribestate] !== undefined) {
-        cdnboxStates.subscribestate[subscribestate] = { "activated": true };
-      }
-      res.end(cdnboxStates.getstatevector(cdnboxStates.local));
-    } else {
-      res.end('not ready');
-    }
   } else if (req.url.startsWith("/cdn/penalite")) {
     res.writeHead(200, { 'Content-Type': 'text/plain' });
     res.end('' + (cdnboxStates.local.config.penal + Math.floor(cdnboxStates.penalbucket.sigma / 4)) + '\n');
@@ -431,7 +418,6 @@ function apiStates(req,res) {
           '"targetbw": "' + cdnboxState.config.targetbw + '", ' +
           '"perftime": "' + cdnboxState.gettime + '", ' +
           '"score": "' + cdnboxState.score + '", ' +
-          '"score": "' + cdnboxState.score + '", ' +
           '"penal": "' + Math.floor(cdnboxState.config.penal + cdnboxStates.penalbucket.sigma) + '", ' +
           '"bucket": "' + cdnboxState.bucket + '", ' +
           '"globalpenal": "' + Math.floor(cdnboxState.config.penal + cdnboxStates.penalbucket.sigma) + '", ' +
@@ -462,11 +448,11 @@ function getip(req) {
 
 var perfjscount = 0;
 var perfjscode = `
-    var dt=0, ct=0, conc=0, sslt=0, sslc=0, totc=0, rdt=0, rct=0, dur=0,
+    var dt=0, ct=0, conc=0, sslt=0, sslc=0, totc=0, rdt=0, rct=0, dur=0, durt=0, durc=0,
         resources = performance.getEntriesByType("resource");
     for (var i = 0; i < resources.length; i++) {
       var j = resources[i];
-      if (j.name.match(domain)) {; 
+      if (j.name.match(domain)) {
         totc++;
         if (j.domainLookupEnd - j.domainLookupStart > dt) {
           dt = j.domainLookupEnd - j.domainLookupStart;
@@ -477,6 +463,9 @@ var perfjscode = `
         if (j.connectEnd > j.secureConnectionStart &&
             j.secureConnectionStart > j.connectStart) {
           sslt += j.connectEnd - j.secureConnectionStart; sslc++;
+        }
+        if (j.domainLookupStart !== 0 && j.duration > 0) {
+          durt += j.duration; durc++;
         }
       }
       if (j.name.match(beaconurl)) {
@@ -494,9 +483,10 @@ var perfjscode = `
         'D:' + Math.round(dt) + 
         ':A:' + Math.round(rdt) +
         ':B:' + Math.round(rct) +
-        ':C:' + Math.round(ct==0?0:ct/conc) + ':' + conc +
+        ':C:' + Math.round(conc===0?0:ct/conc) + ':' + conc +
         ':L:' + Math.round(dur) +
-        ':S:' + Math.round(sslt==0?0:sslt/sslc) + ':' + sslc +
+        ':M:' + Math.round(durc===0?0:durt/durc) + ':' + durc +
+        ':S:' + Math.round(sslc===0?0:sslt/sslc) + ':' + sslc +
         ':T:' + totc +
         ':N:' + btoa(navigator.userAgent);
     document.getElementsByTagName('body')[0].appendChild(s);
@@ -550,6 +540,12 @@ function perfbeacon(req,res) {
         case 'L':
           i++;
           log += ' "rdur": ' + stab[i] + ',';
+          break;
+        case 'M':
+          i++;
+          log += ' "durt": ' + stab[i] + ',';
+          i++;
+          log += ' "durc": ' + stab[i] + ',';
           break;
         case 'C':
           i++;
