@@ -23,7 +23,7 @@ const https = require('https');
 const timers = require('timers');
 const url = require('url');
 const crypto = require('crypto');
-const { execFile } = require('child_process');
+const childProcess = require('child_process');
 const fs = require('fs');
 const os = require('os');
 
@@ -360,51 +360,50 @@ function calcScore(cdnboxState) {
 }
 
 // probes perf
+var probeChild;
 function getPerf(cdnbox) {
-  var cdnboxState = cdnboxStates[cdnbox.name];
   if (cdnbox.fixscore !== undefined) { return; }
-  var cdnboxCache = cdnboxState.cache;
-  if (cdnboxCache.perfoptions === undefined) {
-    var myperfURL = cdnbox.perfURL;
+  var cdnboxState = cdnboxStates[cdnbox.name], cdnboxCache = cdnboxState.cache;
+
+  // starts probechild process and process probe results.
+  if (probeChild === undefined) {
+    probeChild = childProcess.fork('lib/cdnboxProbe.js');
+    probeChild.on('message', (msg) => {
+        var cdnboxState = cdnboxStates[msg.name];
+        cdnboxState.gettime = msg.perf;
+        cdnboxState.cache.perflastupdate = Date.now();
+        if (msg.status === 200) {
+          // give local trafic a bonus.
+          if (cdnboxState.config === cdnboxStates.local.config) { cdnboxState.gettime = Math.round(cdnboxState.gettime / 2); }
+          calcScore(cdnboxState);
+          if (cdnboxState.status === 'fail') { cdnboxState.status = 'on'; }
+        } else {
+          cdnboxState.score = 100000 + msg.status;
+          if (cdnboxState.status === 'on') { cdnboxState.status = 'fail'; }
+        }
+    });
+  }
+
+  // starts probe or restart if unresponsive.
+  if (cdnboxCache.perflastupdate === undefined || (Date.now() - cdnboxCache.perflastupdate > 20000)) {
+    var perfoptions, myperfURL = cdnbox.perfURL;
     if (cdnbox.perfURL === undefined) { myperfURL = cdnbox.proto + '//' + cdnbox.hostname + '/cdn/image.gif'; } 
     var pu = url.parse(myperfURL);
-    cdnboxCache.perfoptions = { protocol: pu.protocol, port: pu.port, path: pu.path, agent: false };
+    perfoptions = { protocol: pu.protocol, port: pu.port, path: pu.path, agent: false };
     if (cdnboxState.netint !== undefined) {
-      cdnboxCache.perfoptions.hostname = '127.0.0.1';
-      cdnboxCache.perfoptions.servername = pu.hostname
+      perfoptions.hostname = '127.0.0.1';
+      perfoptions.servername = pu.hostname
     } else {
-      cdnboxCache.perfoptions.hostname = cdnbox.hostname;
+      perfoptions.hostname = cdnbox.hostname;
     }
-    cdnboxCache.perfoptions.headers = { 'Host': pu.hostname, 'Connection': 'close', 'User-Agent': 'CDNBoxBot 1.0' };
-  }
-  var getter = (cdnboxCache.perfoptions.protocol == "http:"?http:https);
-  getter.get(cdnboxCache.perfoptions, function () {
-      var starttime = Date.now();
-      return function (res) {
-        res.on('data', (d) => {
-          if (res.statusCode == 200) {
-            cdnboxState.gettime = Date.now() - starttime;
-            // give local trafic a bonus.
-            if (cdnbox === cdnboxStates.local.config) { cdnboxState.gettime = Math.round(cdnboxState.gettime / 2); }
-            calcScore(cdnboxState);
-            if (cdnboxState.status === 'fail') { cdnboxState.status = 'on'; }
-            console.log(' "type": "probe", "target": "' + cdnbox.name + '",' +
-                        ' "time": ' + cdnboxState.gettime );
-          } else {
-            logerror('"error": "perfURL: ' + cdnboxState.config.perfURL + ' response: ' + res.statusCode + '"');
-            cdnboxState.score = 100000;
-            if (cdnboxState.status === 'on') { cdnboxState.status = 'fail'; }
-          }
-        });
-      }
-  }())
-  .setTimeout(5000)
-  .on('error', (e) => {
+    perfoptions.headers = { 'Host': pu.hostname, 'Connection': 'close', 'User-Agent': 'CDNBoxBot 1.0' };
+    if (cdnboxCache.perflastupdate !== undefined && (Date.now() - cdnboxCache.perflastupdate > 20000)) {
       cdnboxState.score = 100000;
       if (cdnboxState.status === 'on') { cdnboxState.status = 'fail'; }
-      logerror('"error": "' + e.toString().replace(/"/g,'') + '"');
-  })
-  .end();
+      logerror('"error": "getPerf: timeout on ' + cdnbox.name + '"');
+    }
+    probeChild.send({ 'name': cdnbox.name, 'interval': 10000, 'options': perfoptions });
+  }
 }
 
 // whoami
@@ -485,7 +484,7 @@ function dolocaltests(cdnboxState) {
 
 function getvarnishmetrics() {
   if (cdnboxStates.varnishmetrics === undefined) { cdnboxStates.varnishmetrics = {}; }
-  var child = execFile('varnishstat', ['-j', '-1'], (error, stdout, stderr) => {
+  var child = childProcess.execFile('varnishstat', ['-j', '-1'], (error, stdout, stderr) => {
     if (error) {
       console.error(error);
     } else {
